add file to git ignore

--- a/index.html
+++ b/index.html
@@ -2,6 +2,11 @@
 <html>
     <head>
         <title>Listing people frontend</title>
+        <link 
+            rel="stylesheet"
+            type="text/css" 
+            href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
+    </link>
     </head>
     <body>
         <script src="app/index.ts"></script>
